fix change book discussion flush function

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -5,7 +5,7 @@
 			<div class="search-container">
 				<div class="search-wrapper">
 					<form class="form-wrapper cf" action method="get" class="search-form">
-						<input type="text" placeholder="正在看什麼書呢？">
+						<input type="text" placeholder="正在看什麼書呢？（搜尋尚未開放）">
 						<button type="submit">
 							<span class="search-web">Search</span>
 							<span class="search-mobile"><span class="glyphicon glyphicon-search"></span></span>
