--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -602,6 +602,24 @@ ul{
     height: 35px;
 }
 
+.page-number-container{
+    width: 100%;
+    height: 100%;
+    font-size:60px;
+}
+
+.row-eq-height {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display:         flex;
+}
+
+
+.vertical-align{
+    display: flex;
+    align-items: center;
+}
 
 @media screen and (max-width: 480px) {
     .search-web{
