--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="user-scalable=0">
 	<meta name="viewport" content="user-scalable=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+	<meta property="og:url" content="http://boocmarc.com"/>
+	<meta property="og:title" content="BoocMarc 找到和你一樣愛閱讀的朋友。"/>
+	<meta property="og:image" content="http://i.imgur.com/egQKe6r.png"/>
 	<title>Booc Marc</title>
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<!-- Latest compiled and minified CSS -->
