--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
 	<meta property="og:title" content="BoocMarc 找到和你一樣愛閱讀的朋友。"/>
 	<meta property="og:image" content="http://i.imgur.com/egQKe6r.png"/>
 	<title>Booc Marc</title>
+	<link rel="icon" href="../imgs/favicon.png">
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
