order page upward

--- a/public/partials/book.html
+++ b/public/partials/book.html
@@ -32,7 +32,7 @@
 			  </div>
 			</div>
 			<div class="list-group">
-			  <button ng-click="getDescussion(discussion._id)" class="list-group-item" ng-repeat="discussion in discussions | orderBy:'-page'">
+			  <button ng-click="getDescussion(discussion._id)" class="list-group-item" ng-repeat="discussion in discussions | orderBy:'page'">
 			  	<div class="row row-eq-height vertical-align">
 			  		<div class="col-xs-1">
 			  			<div class="page-number-container text-center">
