--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="user-scalable=0">
-	<meta name="viewport" content="user-scalable=no">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta property="og:url" content="http://boocmarc.com"/>
 	<meta property="og:title" content="BoocMarc 找到和你一樣愛閱讀的朋友。"/>
 	<meta property="og:image" content="http://i.imgur.com/egQKe6r.png"/>
