--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -5,7 +5,7 @@
 			<div class="search-container">
 				<div class="search-wrapper">
 					<form class="form-wrapper cf"  class="search-form">
-						<input ng-model="searchInput" type="text" placeholder="正在看什麼書呢？">
+						<input ng-model="searchInput" type="text" placeholder="正在看什麼書呢？(輸入書名/作者開始搜尋)">
 						<button type="button" ng-click="search(searchInput)">
 							<span class="search-web">Search</span>
 							<span class="search-mobile"><span class="glyphicon glyphicon-search"></span></span>
